Fix app bar on mobile, increase size of context menus on mobile

--- a/src/styles/components/_app-bar.scss
+++ b/src/styles/components/_app-bar.scss
@@ -5,12 +5,18 @@
   margin-bottom: 2rem;
   z-index: 10;
 
-  //@media screen and (max-width: 1000px) {
-  //  margin-bottom: 1rem;
-  //  align-items: stretch;
-  //  flex-direction: column;
-  //  gap: 1rem;
-  //}
+  @media screen and (max-width: 1000px) {
+    &:has(.app-search-bar) {
+      margin-bottom: 1rem;
+      align-items: stretch;
+      flex-direction: column;
+      gap: 1rem;
+
+      .app-search-bar {
+        width: 100%;
+      }
+    }
+  }
 
   &__content {
     display: flex;
