--- a/src/styles/components/_nav-bar.scss
+++ b/src/styles/components/_nav-bar.scss
@@ -60,7 +60,7 @@
     justify-content: center;
     align-items: center;
     font-weight: 600;
-    z-index: 0;
+    z-index: 1;
     cursor: pointer;
     transition: 0.2s ease;
     opacity: 0.85;
